5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1674_1107.log
== TEST (2019-04-30 11:05:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = int(input("primeiro numero: ")
b = int(input("digite o segundo numero: "))
		  
if ((a<0) or (a>6)) or ((b<0) or (b>6)) :
	print("A entrada", x, "eh invalida")

-- ERROR:
File "XXXX", line 6
    b = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:05:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

a = int(input("primeiro numero: "))
b = int(input("digite o segundo numero: "))
		  
if ((a<0) or (a>6)) or ((b<0) or (b>6)) :
	print("A entrada", x, "eh invalida")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("A entrada", x, "eh invalida")
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
